--- a/yatube/templates/includes/group_post.html
+++ b/yatube/templates/includes/group_post.html
@@ -1,8 +1,18 @@
-<ul>
-    <li>Автор: {{ post.author.get_full_name }} </li>
-    <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
-</ul>
-<p>{{ post.text }}</p>
-{% if author %}    
-    <a href="{% url 'posts:post_detail' post.pk %}">подробная информация </a><br>
-{% endif %} 
+<article>
+    <ul>
+        {% if is_profile %} 
+        {% else %}
+            <li>Автор: {{ post.author.get_full_name }} 
+                <a href="{% url 'posts:profile' post.author.username %}">все посты пользователя</a>
+            </li>
+         {% endif %}  
+        <li>Дата публикации: {{ post.pub_date|date:"d E Y" }}</li>
+    </ul>
+    <p>{{ post.text }}</p>
+    {% if post.author %}    
+        <a href="{% url 'posts:post_detail' post.pk %}">подробная информация</a><br>
+    {% endif %} 
+</article>
+{% if post.group %} 
+    <a href="{% url 'posts:grouppa' post.group.slug %}">все записи группы</a>
+{% endif %}
