--- a/yatube/templates/includes/group_one_post.html
+++ b/yatube/templates/includes/group_one_post.html
@@ -1,10 +1,8 @@
-
 <ul class="list-group list-group-flush">
     <li class="list-group-item">
       Дата публикации: {{ post_id_selected.pub_date|date:"d E Y" }}
     </li>
-    {% if post_id_selected.group %}   
-    <!-- если у поста есть группа -->   
+    {% if post_id_selected.group %}    
       <li class="list-group-item">
         Группа: {{post_id_selected.group}}
         <a href="{% url 'posts:grouppa' post_id_selected.group.slug %}">
@@ -13,7 +11,7 @@
       </li>
       {% endif %}
       <li class="list-group-item">
-        Автор: {{ post_id_selected.author }}
+        Автор:  {{ post_id_selected.author.get_full_name }} {{ post_id_selected.author }}
       </li>
       <li class="list-group-item d-flex justify-content-between align-items-center">
       Всего постов автора:  <span >{{count_posts}}</span>
@@ -23,4 +21,4 @@
         Все посты пользователя
       </a>
     </li>
-  </ul>
+</ul>
