--- a/yatube/templates/posts/group_list.html
+++ b/yatube/templates/posts/group_list.html
@@ -1,15 +1,17 @@
 {% extends 'base.html' %}
  
+{% block title %} {{ group.title }} {% endblock %}
 
 {%block content%}
 <div class="container py-5"> 
     <h1> {{ group.title }} </h1>
     <p> {{ group.description }} </p>
     <article>
-        {% for post in posts %}
-        {% include 'includes/group_post.html' %}
-            {% if not forloop.last %}<hr>{% endif %}
+        {% for post in page_obj %}
+            {% include 'includes/group_post.html' %}
+                {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
+        {% include 'posts/includes/paginator.html' %}
     </article> 
 </div>
 {% endblock %}
