--- a/yatube/templates/posts/post_detail.html
+++ b/yatube/templates/posts/post_detail.html
@@ -10,9 +10,10 @@
         {% include 'includes/group_one_post.html' %}
     </aside>
     <article class="col-12 col-md-9">
-      <p>
-        {{post_id_selected.text}}  
-      </p>
+      <p>{{post_id_selected.text}}</p>
+      {% if request.user.is_authenticated  %}
+        <a class="btn btn-primary" href="{% url 'posts:post_edit'  post_id_selected.id %}">Редактировать запись</a>
+      {% endif %}
     </article>
 </div> 
 {% endblock %}
