--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,22 +1,20 @@
 {% extends 'base.html' %}
 
 {% block title %} 
-    Профайл пользователя {{author}}
+    {{author.get_full_name}} профайл пользователя 
 {% endblock %}
 
 {%block content%}
 <div class="container py-5">
-    <h1>Все посты пользователя {{author}}</h1>
+    <h1>Все посты пользователя {{author.get_full_name}}</h1>
     <h3>Всего постов: {{count_posts}}</h3>
     <article>
         {% for post in page_obj %}
         {% include 'includes/group_post.html' %}
-        {% if post.group %}   
-            <a href="{% url 'posts:grouppa' post.group.slug %}">все записи группы: {{post.group}}</a>
-        {% endif %}
             {% if not forloop.last %}<hr>{% endif %}
         {% endfor %}
         {% include 'posts/includes/paginator.html' %}
     </article> 
 </div>
 {% endblock %}
+
