--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %} 
-    {{author.get_full_name}} профайл пользователя 
-{% endblock %}
+{% block title %} {{author.get_full_name}} профайл пользователя {% endblock %}
 
 {%block content%}
 <div class="container py-5">
