--- a/yatube/templates/includes/group_one_post.html
+++ b/yatube/templates/includes/group_one_post.html
@@ -1,24 +1,20 @@
 <ul class="list-group list-group-flush">
     <li class="list-group-item">
-      Дата публикации: {{ post_id_selected.pub_date|date:"d E Y" }}
+      Дата публикации: {{ post_selected.pub_date|date:"d E Y" }}
     </li>
-    {% if post_id_selected.group %}    
-      <li class="list-group-item">
-        Группа: {{post_id_selected.group}}
-        <a href="{% url 'posts:grouppa' post_id_selected.group.slug %}">
-          все записи группы
-        </a>
-      </li>
-      {% endif %}
-      <li class="list-group-item">
-        Автор:  {{ post_id_selected.author.get_full_name }} {{ post_id_selected.author }}
-      </li>
-      <li class="list-group-item d-flex justify-content-between align-items-center">
+    {% if post_selected.group %}    
+    <li class="list-group-item">
+      Группа: {{post_selected.group}}
+      <a href="{% url 'posts:grouppa' post_selected.group.slug %}"> все записи группы </a>
+    </li>
+    {% endif %}
+    <li class="list-group-item">
+      Автор:  {{ post_selected.author.get_full_name }} {{ post_selected.author }}
+    </li>
+    <li class="list-group-item d-flex justify-content-between align-items-center">
       Всего постов автора:  <span >{{count_posts}}</span>
     </li>
     <li class="list-group-item">
-      <a href="{% url 'posts:profile' post_id_selected.author %}">
-        Все посты пользователя
-      </a>
+      <a href="{% url 'posts:profile' post_selected.author %}"> Все посты пользователя </a>
     </li>
 </ul>
