--- a/yatube/templates/posts/profile.html
+++ b/yatube/templates/posts/profile.html
@@ -4,7 +4,7 @@
 
 {%block content%}
 <div class="container py-5">
-    <h1>Все посты пользователя {{author.get_full_name}}</h1>
+    <h1>Все посты пользователя {{author.get_full_name}} {{author.username}}</h1>
     <h3>Всего постов: {{count_posts}}</h3>
     <article>
         {% for post in page_obj %}
